<resources>
    <string name="app_name">PolarStreamer</string>
    <string name="tab_text_1">H10 Heart rate sensor</string>
    <string name="tab_text_2">OH1 Optical heart rate sensor</string>
    <string name="set_id_button">Enter Device ID</string>
    <string name="device_id">device_id</string>
    <string name="device_id_view">Device ID: </string>
    <string name="ecg_name">ECG (mV): </string>
    <string name="hr_name">HR / RR</string>
    <string name="hr_title">HR and RR vs. Time</string>
    <string name="ecg_title">ECG vs. Time</string>
    <string name="hr_range_title">HR, bpm  / RR, ms/10</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="connect">CONNECT ECG</string>
    <string name="connect2">CONNECT HR/RR</string>
    <string name="connecting">Connecting to device</string>
    <string name="connected">Connected!</string>
    <string name="disconnected">Disconnected!</string>
    <string name="searchBattery">Searching for Battery Level</string>string>
    <string name="connection_device_view">Connect Device: </string>
    <string name="connection_status_view">Connection Status: </string>
    <string name="battery_view">Battery: </string>
    <string name="timer_view">Timer: </string>
    <string name="start_connection">Start</string>
    <string name="stop_connection">Stop</string>
    <string name="ecg_range_title">ECG, mV</string>
    <string name="acc_title">ACC X, Y, Z (mg) vs. Time</string>
    <string name="acc_range_title">ACC, mg</string>
    <string name="ppg_range_title">Amplitude (au)</string>
    <string name="ppg_title">PPG Amplitude (au) vs. Time</string>
    <string name="plot_button_view">View Plot</string>
    <string name="hr">HR (bpm):</string>
    <string name="acc">ACC (mg):</string>
    <string name="ppg">PPG:</string>
    <string name="ppi">PPI:</string>
    <string name="Hz25">25 Hz</string>
    <string name="Hz50">50 Hz</string>
    <string name="Hz100">100 Hz</string>
    <string name="Hz200">200 Hz</string>
    <string name="G2">2 g</string>
    <string name="G4">4 g</string>
    <string name="G8">8 g</string>
    <string name="hr_radio_button">HR Plot</string>
    <string name="ECG_radio_button">ECG Plot</string>
    <string name="ACC_radio_button">ACC Plot</string>
    <string name="range_setting">Range</string>
    <string name="sampling_rate_setting">Sampling Rate</string>
    <string name="show_plots">Show Plots</string>
    <string name="rr">RR (ms):</string>string>
</resources>