<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true">

        <TextView
            android:id="@+id/idView_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/device_id_view"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextSetID_frag1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextSetID_frag1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/set_id_button"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/idView_frag1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Suspicious0dp" />

        <ToggleButton
            android:id="@+id/start_stop_connection_frag1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            android:textOff="Start Connection"
            android:textOn="Stop Connection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idView_frag1" />

        <Button
            android:id="@+id/setting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:text="setting"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/start_stop_connection_frag1"
            app:layout_constraintTop_toBottomOf="@id/idView_frag1" />

        <TextView
            android:id="@+id/connectStatusView_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/connection_status_view"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_stop_connection_frag1" />

        <TextView
            android:id="@+id/status_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/connectStatusView_frag1"
            app:layout_constraintTop_toBottomOf="@+id/start_stop_connection_frag1" />

        <TextView
            android:id="@+id/batteryView_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/battery_view"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connectStatusView_frag1" />

        <TextView
            android:id="@+id/battery_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/batteryView_frag1"
            app:layout_constraintTop_toBottomOf="@id/connectStatusView_frag1" />

        <TextView
            android:id="@+id/timerView_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/timer_view"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/batteryView_frag1" />

        <Chronometer
            android:id="@+id/timer_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/ap_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/timerView_frag1"
            app:layout_constraintTop_toBottomOf="@id/batteryView_frag1" />

        <TextView
            android:id="@+id/hrView_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/hr"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerView_frag1" />

        <TextView
            android:id="@+id/hr_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hrView_frag1"
            app:layout_constraintTop_toBottomOf="@id/timerView_frag1" />

        <TextView
            android:id="@+id/rrView_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/rr"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hrView_frag1" />

        <TextView
            android:id="@+id/rr_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rrView_frag1"
            app:layout_constraintTop_toBottomOf="@id/hrView_frag1" />

        <ToggleButton
            android:id="@+id/stream_ECG_button_frag1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            android:textOff="Stream ECG"
            android:textOn="Pause ECG"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rrView_frag1" />

        <ToggleButton
            android:id="@+id/stream_ACC_button_frag1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            android:textOff="Stream ACC"
            android:textOn="Pause ACC"
            app:layout_constraintStart_toEndOf="@+id/stream_ECG_button_frag1"
            app:layout_constraintTop_toBottomOf="@id/rrView_frag1" />

        <TextView
            android:id="@+id/ecgView_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/ecg_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stream_ECG_button_frag1" />


        <TextView
            android:id="@+id/ecg_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ecgView_frag1"
            app:layout_constraintTop_toBottomOf="@id/stream_ECG_button_frag1" />

        <TextView
            android:id="@+id/accView_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/acc"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ecgView_frag1" />

        <TextView
            android:id="@+id/acc_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/accView_frag1"
            app:layout_constraintTop_toBottomOf="@id/ecgView_frag1" />

        <ToggleButton
            android:id="@+id/start_stop_recording_frag1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            android:textOff="Start Recording"
            android:textOn="Stop Recording"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accView_frag1" />

        <Button
            android:id="@+id/export_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            android:text="export data"
            app:layout_constraintStart_toEndOf="@+id/start_stop_recording_frag1"
            app:layout_constraintTop_toBottomOf="@+id/accView_frag1" />

        <TextView
            android:id="@+id/show_plots"
            android:layout_width="128dp"
            android:layout_height="26dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/show_plots"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/export_data" />

        <RadioGroup
            android:id="@+id/radioGroupPlots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_plots">

            <RadioButton
                android:id="@+id/radioButtonHR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_radio_button" />

            <RadioButton
                android:id="@+id/radioButtonECG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ECG_radio_button" />

            <RadioButton
                android:id="@+id/radioButtonACC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ACC_radio_button" />
        </RadioGroup>

        <com.androidplot.xy.XYPlot
            android:id="@+id/plotHR"
            style="@style/FullScreenGraph"
            android:layout_width="325dp"
            android:layout_height="230dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:backgroundColor="@color/design_default_color_background"
            app:graphBackgroundColor="@color/design_default_color_background"

            app:graphMarginBottom="12dp"
            app:graphMarginLeft="30dp"
            app:graphMarginRight="5dp"
            app:graphMarginTop="20dp"
            app:gridBackgroundColor="#F1F4F4"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupPlots"

            app:lineLabels="left"
            app:paddingBottom="10dp"
            app:paddingLeft="5dp"
            app:paddingRight="5dp"
            app:paddingTop="5dp"
            app:rangeTitle="@string/hr_range_title"
            app:rangeTitleTextColor="#000000"
            app:rangeTitleTextSize="14dp"
            app:renderMode="use_background_thread"
            app:title="@string/hr_title"
            app:titleTextColor="#000000"
            app:titleTextSize="15dp" />

        <com.androidplot.xy.XYPlot
            android:id="@+id/plotECG"
            style="@style/FullScreenGraph"
            android:layout_width="325dp"
            android:layout_height="230dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:backgroundColor="@color/design_default_color_background"
            app:graphBackgroundColor="@color/design_default_color_background"

            app:graphMarginBottom="12dp"
            app:graphMarginLeft="30dp"
            app:graphMarginRight="5dp"
            app:graphMarginTop="20dp"
            app:gridBackgroundColor="#F1F4F4"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupPlots"

            app:lineLabelInsetLeft="12dp"
            app:lineLabels="left"
            app:rangeTitle="@string/ecg_range_title"
            app:rangeTitleTextColor="#000000"
            app:rangeTitleTextSize="14dp"
            app:renderMode="use_background_thread"
            app:title="@string/ecg_title"
            app:titleTextColor="#000000"
            app:titleTextSize="15dp" />

        <com.androidplot.xy.XYPlot
            android:id="@+id/plotACC"
            style="@style/FullScreenGraph"
            android:layout_width="325dp"
            android:layout_height="230dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:backgroundColor="@color/design_default_color_background"
            app:graphBackgroundColor="@color/design_default_color_background"

            app:graphMarginBottom="12dp"
            app:graphMarginLeft="30dp"
            app:graphMarginRight="5dp"
            app:graphMarginTop="20dp"
            app:gridBackgroundColor="#F1F4F4"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupPlots"

            app:lineLabelInsetLeft="12dp"
            app:lineLabels="left"
            app:paddingBottom="10dp"
            app:paddingLeft="5dp"
            app:paddingRight="5dp"
            app:paddingTop="5dp"
            app:rangeTitle="@string/acc_range_title"
            app:rangeTitleTextColor="#000000"
            app:rangeTitleTextSize="14dp"
            app:renderMode="use_background_thread"
            app:title="@string/acc_title"
            app:titleTextColor="#000000"
            app:titleTextSize="15dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>